--- a/src/pages/(loggedIn)/donation/DDFExport.scss
+++ b/src/pages/(loggedIn)/donation/DDFExport.scss
@@ -30,7 +30,7 @@
     visibility: hidden;
     transition: opacity 0.2s ease-in-out, visibility 0.2s ease-in-out;
 
-    .dropdown-item {
+    .dropdownn-item {
       position: relative;
 
       span {
