--- a/src/pages/(loggedIn)/dashboard/Dashboard.scss
+++ b/src/pages/(loggedIn)/dashboard/Dashboard.scss
@@ -135,6 +135,7 @@
               display: flex;
               flex-wrap: wrap;
               max-width: 380px;
+              // border: 1px solid red;
             }
 
             .graph-item {
