--- a/src/pages/(loggedIn)/BookRoomManagement/BookRoomManagementBed/BookRoomManagementBed.scss
+++ b/src/pages/(loggedIn)/BookRoomManagement/BookRoomManagementBed/BookRoomManagementBed.scss
@@ -74,7 +74,7 @@
       border: 1px solid #ffd7b5;
       border-radius: 8px;
       margin: 5px;
-      padding: 10px;
+      // padding: 10px;
       position: relative;
 
       .bed-group {
